1st working version of the site

--- a/devblog/templates/devblog.html
+++ b/devblog/templates/devblog.html
@@ -3,23 +3,23 @@
     <head>
         <meta charset="utf-8">
         <meta name="ROBOTS" content="NONE" />
-        <title>Devblog</title>
+        <title>Blog</title>
         
         {% load staticfiles %}
         <link rel="stylesheet" type="text/css" href="{{style}}" />
-        <link rel="favicon" href="{%  static favicon %}">
+        <link rel="favicon" href="{{favicon}}" />
     </head>
 
     <body>
         <div id="wrapper">   
             <div>
-                <h1 class="text_over_main_img">- Sighill<br>-- Blog de développement</h1>
+                <h1 class="text_over_main_img">Blog de développement</h1>
                 <img src="{{main_img}}" alt="main_img" id="main_img">
             </div> <!-- end main_img div -->
 
-            <div class="navbar_container">
+            <div class="container navbar_container">
                 {% for navbar_item in navbar %}
-                <div class="navbar_block">
+                <div class="block">
                     <a href="{{navbar_item.link}}">
                         <h3>{{navbar_item.name}}</h3>
                     </a>
@@ -27,19 +27,19 @@
                 {% endfor %}
             </div> <!-- end navbar_container -->
          
-            <div class="container" id="corpus">
+            <div class="container" id="blog_corpus">
                 {% for post in content %}
                 <div class="container">
                     <div class="block">
                         <h2>{{post.title}}</h2>
-                        <p class="post_footer">Posté le {{post.posted_date.day}}-{{post.posted_date.month}}-{{post.posted_date.year}}. Catégorie : {{post.category}}.</p>
+                        <p class="blog_post_info">Posté le {{post.posted_date.day}}-{{post.posted_date.month}}-{{post.posted_date.year}}. Catégorie : {{post.category}}.</p>
                         <p>{{post.body | safe}}</p>
                     </div>
                 </div>
                 {% endfor %}
             </div> <!-- end corpus container -->
 
-            <div class="container" id="sidebar_right">
+            <div class="container" id="blog_sidebar_right">
                 <div class="container" id="sidebar_container_a">
                     <div class="block">
                         <h4>Catégories</h4>
@@ -56,7 +56,7 @@
                     </div>
                 </div> <!-- end container -->
             </div>
-        </div>
+        </div> <!-- end wrapper -->
 
         <a href="#" class="JesterBox">
           <div id="archi_serveur"><img src="{{img_archi_serveur}}"></div>
