--- a/static/style_season.css
+++ b/static/style_season.css
@@ -20,7 +20,7 @@
     max-width: 898px;
   }
   img#main_img{
-    width: 900px;
+    width: 898px;
   }
 }
 
@@ -64,20 +64,8 @@ p {
   width: 100% auto;
 }
 
-table{
-  width:898px;
-  border-collapse: collapse;
-  padding: 5px;
-}
-
-th, td {
-  padding: 10px;
-  height: 50px;
-}
-
-
 #wrapper {
-  width: 900px;
+  max-width: 900px;
   display: flex;
   flex: 0 0 auto;
   flex-flow: row wrap;
@@ -97,6 +85,7 @@ th, td {
   border: solid #507960 1px;
   text-align: left;
   background-color: rgba(0, 0, 0, 0);
+
 }
 
 .block { 
@@ -116,8 +105,9 @@ th, td {
 
 .text_over_main_img{
   position: absolute;
-  top: 12px;
-  padding-left: 210px;
+  top: 20px;
+  padding-left: 250px;
+  color: white;
 }
 
 #main_img{
@@ -128,19 +118,20 @@ th, td {
 /* BLOG SPECIFICS - - - - - - - - - - - - - - - - - - - - - - - - -*/
 
 #blog_corpus{
-  width: 750px;
+  width: 700px;
   border: hidden;
   margin: 0;
 }
 
 #blog_sidebar_right{
-  width: 144px;
+  width: 195px;
+  flex: 0 0 auto;
+  border: 0px;
   margin: 0;
-  border: hidden;
 }
 
 #blog_sidebar_right img{
-  width: 90%;
+  width: 100%;
   height: auto;
 }
 
@@ -148,30 +139,8 @@ th, td {
   font-size: 70%;
 }
 
-/* CV SPECIFICS - - - - - - - - - - - - - - - - - - - - - - - - - -*/
-
-.container_comp{
-}
-
-.comp_block{
-  max-width: 33%;
-}
-
-.comp_list{
-  margin:2px;
-  list-style-type: square;
-}
-
-.table_oddline{
-  background-color: #eef0fa;
-}
-
-.table_evenline{
-  background-color: #ffffff;
-}
-
-/* JesterBox - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-/* Author: Schizohatter/Soanvig (http://schizohatter.tk)
+/* JesterBox 
+ * Author: Schizohatter/Soanvig (http://schizohatter.tk)
  * More information in readme (https://github.com/soanvig/JesterBox)
  */
 
