--- a/devblog/templates/devblog.html
+++ b/devblog/templates/devblog.html
@@ -27,7 +27,7 @@
                 {% endfor %}
             </div> <!-- end navbar_container -->
          
-            <div class="container" id="blog_corpus">
+            <div class="blog_corpus">
                 {% for post in content %}
                 <div class="container">
                     <div class="block">
@@ -39,8 +39,8 @@
                 {% endfor %}
             </div> <!-- end corpus container -->
 
-            <div class="container" id="blog_sidebar_right">
-                <div class="container" id="sidebar_container_a">
+            <div class="blog_sidebar_right">
+                <div class="container">
                     <div class="block">
                         <h4>Catégories</h4>
                         <ul>
