--- a/main/templates/cv_bck.html
+++ b/main/templates/cv_bck.html
@@ -28,38 +28,35 @@
             </div> <!-- end navbar_container -->
 
             <h1>Compétences</h1>
-            <div class="block">
-                <table class="exp_table ">
-                    <td class="table_align_top">
-                        <h3>Géomatiques</h3>
-                        <ul>
-                            <li class="comp_list">Maîtrise des principes et logiciels SIG</li>
-                            <li class="comp_list">Maîtrise de traitements d'image et télédétection</li>
-                            <li class="comp_list">Maîtrise des base de données</li>
-                            <li class="comp_list">Connaissances en programmation</li>
-                        </ul>
-                    </td>
-                    <td class="table_align_top">
-                        <h3>Techniques</h3>
-                        <ul>
-                            <li class="comp_list">Connaissances en environnement et biologie</li>
-                            <li class="comp_list">Maîtrise de l'assainissement</li>
-                            <li class="comp_list">Aisance durant les missions de terrain</li>
-                            <li class="comp_list">Notions réglementaires en droit de l'environnement</li>
-                        </ul>
-                    </td>
-                    
-                    <td class="table_align_top">
-                        <h3>Relationnelles</h3>
-                        <ul>
-                            <li class="comp_list">Connaissance des collectivités territoriales</li>
-                            <li class="comp_list">Esprit d'équipe</li>
-                            <li class="comp_list">Maîtrise du reporting</li>
-                            <li class="comp_list">Anglais bilingue (TOEIC niv. C2 2013)</li>
-                        </ul>
-                    </td>
-                </table>
-            </div>
+            <div class="container comp_container">
+                <div class="block comp_block">
+                    <h3>Géomatiques</h3>
+                    <ul>
+                        <li class="comp_list">Maîtrise SIG</li>
+                        <li class="comp_list">Maîtrise de traitements d'image et télédétection</li>
+                        <li class="comp_list">Maîtrise base de données</li>
+                        <li class="comp_list">Connaissances programmation</li>
+                    </ul>
+                </div>
+                <div class="block comp_block">
+                    <h3>Techniques</h3>
+                    <ul>
+                        <li class="comp_list">Connaissances en environnement et biologie</li>
+                        <li class="comp_list">Maîtrise de l'assainissement</li>
+                        <li class="comp_list">Aisance durant les missions de terrain</li>
+                        <li class="comp_list">Notions réglementaires</li>
+                    </ul>
+                </div>
+                <div class="block comp_block">
+                    <h3>Relationnelles</h3>
+                    <ul>
+                        <li class="comp_list">Connaissance des collectivités territoriales</li>
+                        <li class="comp_list">Esprit d'équipe</li>
+                        <li class="comp_list">Maîtrise du reporting</li>
+                        <li class="comp_list">Maîtrise de l'anglais (TOEIC niv. C1)</li>
+                    </ul>
+                </div>
+            </div> <!-- end container -->
 
             <h1>Expérience professionnelle</h1>
             <div class="container">
