--- a/main/templates/projets.html
+++ b/main/templates/projets.html
@@ -27,9 +27,9 @@
                 {% endfor %}
             </div> <!-- end navbar_container -->
 
-            <div class="container">
+            <div class="container child">
                 {% for project in project_qs %}
-                <div class="block">
+                <div class="block child">
                     <h2>{{project.title}}</h2>
                     <p class="blog_post_info">Posté le {{project.posted_date.day}}-{{project.posted_date.month}}-{{project.posted_date.year}}.</p>
                     <p>{{project.corpus | safe}}</p>
