--- a/static/style_season.css
+++ b/static/style_season.css
@@ -1,11 +1,16 @@
 /* FOR MOBILE BROWSERS - - - - - - - - - - - - - - - - - - - - - - */
 @media (max-width: 1300px){
   :root {
-    font-size: 4vw;
+    font-size: 3.5vw;
   }
-  img#main_img{
+  .container, img#main_img{
     max-width: 100%;
   }
+
+  h1{
+    font-size : 100%;
+  }
+
 }
 
 /* FOR DESKTOP BROWSERS - - - - - - - - - - - - - - - - - - - - - -*/
@@ -74,6 +79,11 @@ th, td {
   height: 50px;
 }
 
+.img_thumbnail{
+  width: 100px;
+  height: auto;
+}
+
 
 #wrapper {
   width: 900px;
@@ -106,6 +116,9 @@ th, td {
   background-color: #ffffff;
 }
 
+.child {
+  width: 100%;
+}
 /* NAVBAR & TOP PART - - - - - - - - - - - - - - - - - - - - - - - */
 
 .navbar_container{
@@ -117,41 +130,34 @@ th, td {
   position: absolute;
   top: 12px;
   padding-left: 210px;
+  max-width: 600px;
 }
 
-#main_img{
-/*  border: solid #507960 1px;
-*/}
+/* FOOTER SPECIFICS - - - - - - - - - - - - - - - - - - - - - - - -*/
 
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #1b1b1b;
+  text-align: center;
+  border: solid #507960 1px;
+  color: white;
+  font-size: 120%;
+}
 
+.footer a{
+ color: white;
+ font-weight: bold;
+}
 /* BLOG SPECIFICS - - - - - - - - - - - - - - - - - - - - - - - - -*/
-
-.blog_corpus{
-  width: 750px;
-  border: hidden;
-  margin: 0;
-}
-
-.blog_sidebar_right{
-  width: 144px;
-  margin: 0;
-  border: hidden;
-}
-
-.blog_sidebar_right img{
-  max-width: 140px;
-  height: auto;
-}
 
 .blog_post_info{
   font-size: 70%;
 }
 
 /* CV SPECIFICS - - - - - - - - - - - - - - - - - - - - - - - - - -*/
-
-.comp_block{
-  max-width: 33%;
-}
 
 .comp_list{
   margin:2px;
@@ -172,7 +178,14 @@ th, td {
 
 /* PROJECTS SPECIFICS - - - - - - - - - - - - - - - - - - - - - - -*/
 .doc_container{
-  
+  border: hidden;
+}
+
+.doc_block{
+  flex-grow: 0;
+  margin-right: 40px;
+  padding: 5px;
+  border: dotted #507960 1px;
 }
 
 /* JesterBox - - - - - - - - - - - - - - - - - - - - - - - - - - - */
