--- a/main/templates/projets.html
+++ b/main/templates/projets.html
@@ -58,7 +58,8 @@
         </div> <!-- end wrapper -->
 
         <a href="#" class="JesterBox">
-          <div id="archi_serveur"><img src="/static/architecture_serveur.png"></div>
+          <div id="architecture_serveur.png"><img src="/static/architecture_serveur.png"></div>
+          <div id="carte_interpolation_isolignes_1"><img src="/static/carte_interpolation_isolignes_1.png"></div>
         </a>
     </body>
 
